--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,87 +1,80 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!--boostrap-->
-        <link
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-          rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-          crossorigin="anonymous" />
-        <script
-          src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-          integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-          crossorigin="anonymous">
-        </script>
-        <script
-          src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-          integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-          crossorigin="anonymous">
-        </script>
-        <!--boostrap-->
-        <title>點餐系統</title>
-    </head>
-
-    <body class="bg-warning bg-opacity-50">
-        <header class="mb-5 bg-gradient">
-            <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary"
-                    style="background-color: #e3f2fd">
-                <div class="container-fluid">
-                    <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#navbarTogglerDemo01"
-                        aria-controls="navbarTogglerDemo01"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation" >
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
-                        <ul class="nav nav-underline ">
-                            <li class="nav-item">
-                                <a class="nav-link navbar-brand" href="/">點餐系統</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a
-                                class="nav-link dropdown-toggle"
-                                data-bs-toggle="dropdown"
-                                href="#"
-                                role="button"
-                                aria-expanded="false">會員中心</a>
-                                <ul class="dropdown-menu">
-                                    {% if request.cookies.get('user_id') %}
-                                    <li>
-                                        <a class="dropdown-item" href="{{url_for('order_history')}}">歷史訂單</a>
-                                    </li>
-                                    {% else %}
-                                    <li>
-                                        <a class="dropdown-item" href="{{url_for('login' , status="to_history")}}">登入會員</a>
-                                    </li>
-                                    {% endif %}
-                                    <li>
-                                        <a class="dropdown-item" href="{{url_for('cart_detail')}}">購物車</a>
-                                    </li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    {% if request.cookies.get('user_id') %}
-                                    <li>
-                                        <a class="dropdown-item" href="{{url_for('logout')}}">登出</a>
-                                    </li>
-                                    {% endif %}
-                                </ul>
-                            </li>
-                        </ul>
-                    </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>點餐系統</title>
+    <link rel="icon" href="{% static 'bone_icon.png' %}" type="image/png">
+</head>
+<body class="bg-warning bg-opacity-50">
+    <header class="mb-5 bg-gradient">
+        <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd">
+            <div class="container-fluid">
+                <a class="navbar-brand d-flex align-items-center" href="/">
+                    <img class="nav-link" style="width: 48px;" src="{% static 'bone_icon.png' %}" title="foodbone">點餐系統
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link d-flex align-items-center" href="/">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'restaurant_icon.png' %}" title="餐廳">餐廳
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link d-flex align-items-center" href="/">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'food_icon.png' %}" title="美食">美食
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link d-flex align-items-center dropdown-toggle"
+                                data-bs-toggle="dropdown" role="button" aria-expanded="false" href="/">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'person_icon.png' %}" title="會員">會員專區
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a class="dropdown-item" href="#">登入</a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#">註冊</a>
+                                </li>
+                                {% comment %} {% if request.cookies.get('user_id') %} {% endcomment %}
+                                <li><hr class="dropdown-divider"></li>
+                                <li>
+                                    <a class="dropdown-item" href="#">登出</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link d-flex align-items-center" href="/">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'market_icon.png' %}" title="購物車">購物車
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link d-flex align-items-center" href="/">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'manufacturer_icon.png' %}" title="登入">企業登入
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </header>
-        <div class="container my-5">
+            </div>
+        </nav>
+    </header>
+    <div class="container my-5">
         {% block content %}
-
-
-        {% endblock content%}
-        </div>
-    </body>
+        {% endblock content %}
+    </div>
+    <!-- Bootstrap JS (需要jQuery和Popper.js支援) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+6fe/jpFYNsu1fHg6DkPCvpuOfBzxl2apJxq5k4d5G5Zf5aa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
+</body>
 </html>
