--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="static/wickedcss.min.css">{% comment %}http://kristofferandreasen.github.io/wickedCSS/# 動畫{% endcomment %}
+    <link rel="stylesheet" type="text/css" href="static/style.css">{% comment %}login/SignUp的CSS設定{% endcomment %}
     <title>點餐系統</title>
     <link rel="icon" href="{% static 'bone_icon.png' %}" type="image/png">
 </head>
 <body class="bg-warning bg-opacity-50">
     <header class="mb-5 bg-gradient">
-        <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd">
+        <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: #e3f2fd">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="/">
                     <img class="nav-link" style="width: 48px;" src="{% static 'bone_icon.png' %}" title="foodbone">點餐系統
@@ -70,6 +73,8 @@
     </header>
     <div class="container my-5">
         {% block content %}
+
+
         {% endblock content %}
     </div>
     <!-- Bootstrap JS (需要jQuery和Popper.js支援) -->
