--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-warning bg-opacity-50">
     <header class="mb-5 bg-gradient">
-        <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary fixed-top" style="background-color: #e3f2fd">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" href="/">
                     <img class="nav-link" style="width: 48px;" src="{% static 'bone_icon.png' %}" title="foodbone">點餐系統
