--- a/app/templates/client_base.html
+++ b/app/templates/client_base.html
@@ -9,15 +9,106 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/wickedcss.min.css">
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <!-- https://kristofferandreasen.github.io/wickedCSS/ -->
+    <link rel="stylesheet" href="{%static 'wickedcss.min.css' %}">
+    <!--登入畫面動畫-->
+    <link rel="stylesheet" type="text/css" href="{%static 'style.css'%}">
     <title>後臺管理系統</title>
     <link rel="icon" href="{% static 'backfix_icon.png' %}" type="image/png">
 </head>
 
-<body>
+<body class="bg-dark bg-opacity-25">
+    <div class="mb-5 bg-gradient">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light text-white">
+            <div class="container-fluid">
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <img class="nav-link" style="width: 48px;" src="{% static 'backfix_icon.png' %}"
+                        title="foodbone">後臺管理系統
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active d-flex align-items-center" aria-current="page" href="#">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'user_info_icon.png' %}"
+                                    title="基本資料">基本資料
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link d-flex align-items-center" href="#">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'order_menu_icon.png' %}"
+                                    title="餐點系統">餐點系統
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link d-flex align-items-center" href="#">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'order_item_icon.png' %}"
+                                    title="訂單系統">訂單系統
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link d-flex align-items-center" href="#">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'accounting_icon.png' %}"
+                                    title="帳務系統">帳務系統
+                            </a>
+                        </li>
+                    </ul>
+
+                    <!-- <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <img class="nav-link" style="width: 48px;" src="{% static 'order_menu_icon.png' %}"
+                                title="登入">餐點系統
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li>
+                                <a class="dropdown-item" href="#">餐點清單</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="#">訂單系統</a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li> -->
+                    <ul class="navbar-nav justify-content-end">
+                        <li class="nav-item ">
+                            <a class="nav-link d-flex align-items-center " href="#">
+                                <img class="nav-link" style="width: 48px;" src="{% static 'logout_icon.png' %}"
+                                    title="登出">登出
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form> -->
+                </div>
+            </div>
+        </nav>
+    </div>
+    <div class="container my-5">
+        {% block content %}
 
 
+        {% endblock content %}
+    </div>
+    <!-- Bootstrap JS (需要jQuery和Popper.js支援) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+6fe/jpFYNsu1fHg6DkPCvpuOfBzxl2apJxq5k4d5G5Zf5aa"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+        integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+        integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
