--- a/app/templates/client_base.html
+++ b/app/templates/client_base.html
@@ -39,7 +39,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link d-flex align-items-center" href="#">
+                            <a class="nav-link d-flex align-items-center" href="/clt/menu/">
                                 <img class="nav-link" style="width: 48px;" src="{% static 'order_menu_icon.png' %}"
                                     title="餐點系統">餐點系統
                             </a>
