--- a/app/templates/client_menu.html
+++ b/app/templates/client_menu.html
@@ -3,37 +3,141 @@
 {% block content %}
 
 <div class="container mt-3 bg-light bg-opacity-50 rounded shadow-lg p-3 mb-5 bg-body rounded">
-    <div class="row">
-        <div class="col-md-2 mt-2 justify-content-center align-items-center d-flex">
-            <img src="{%static 'image/平凡之屋.jpg'%}" class="img-thumbnail" name="meals_previews" id="meals_previews">
+    <form method="post">
+        {% csrf_token %}
+        <div class="rounded shadow-lg p-3 mb-5 bg-body rounded">
+            <table class="table">
+                <thead class=" table-dark">
+                    <tr>
+                        <th scope="col">餐點狀態</th>
+                        <th scope="col">餐點照片</th>
+                        <th scope="col">餐點名稱</th>
+                        <th scope="col">餐點價錢</th>
+                        <th scope="col">餐點描述</th>
+                        <th scope="col">餐點操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="align-middle">
+                        <td>
+                            <div class="form-check justify-content-center d-flex">
+                                <input class="form-check-input" type="radio" name="meals_status" id="flexRadioDefault1"
+                                    value="1" checked>
+                                <label class="form-check-label" for="flexRadioDefault1">
+                                    上線
+                                </label>
+                            </div>
+                            <br>
+                            <div class="form-check justify-content-center d-flex">
+                                <input class="form-check-input" type="radio" name="meals_status" id="flexRadioDefault2"
+                                    value="0">
+                                <label class="form-check-label" for="flexRadioDefault2">
+                                    下線
+                                </label>
+                            </div>
+                        </td>
+                        <td>
+                            <img src="{%static 'image/平凡之屋.jpg'%}" class="img-thumbnail" name="meals_previews"
+                                style="height: 120px;width: 120px;">
+                        </td>
+                        <td><input type="text" class="form-control" id="meals_name" name="meals_name" value='' readonly>
+                        </td>
+                        <td><input type="text" class="form-control" id="meals_prices" name="meals_prices" value=''
+                                readonly>
+                        </td>
+                        <td><textarea class="form-control" name="meals_describe" value="" readonly></textarea>
+                        </td>
+                        <td>
+                            <div class="justify-content-center d-flex">
+                                <a href="/stud/?a=u&q={{item.meals_name}}">
+                                    <img style="width:16px " src="{% static 'modify_icon.png' %} " title="修改">修改
+                                </a>
+                            </div>
+                            <br>
+                            <div class="justify-content-center d-flex">
+                                <a href="/stud/?a=d&q={{item.meals_name}}">
+                                    <img style="width:16px " src="{% static 'remove_icon.png' %}" title="刪除">刪除
+                                </a>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="justify-content-center d-flex align-items-center">
+                <button type="button" class="btn btn-outline-secondary mt-3 " data-bs-toggle="modal"
+                    data-bs-target="#staticBackdrop">
+                    <img style=" width: 24px; height: 24px;" src="{% static 'add.png' %}" title="新增">新增餐點
+                </button>
+            </div>
         </div>
-        <div class="col-md-8 mt-2 ">
-            <div class="input-group justify-content-center align-items-center d-flex md-2 mt-2">
-                <span class="input-group-text col-md-2">餐點名稱</span>
-                <input type="text" class="form-control" placeholder="" name="meals_name" readonly>
-            </div>
-            <div class="input-group justify-content-center align-items-center d-flex md-2 mt-2">
-                <span class="input-group-text col-md-2">餐點價格</span>
-                <input type="tel" class="form-control" placeholder="" name="meals_price" readonly>
-            </div>
-            <div class="input-group justify-content-center align-items-center d-flex md-2 mt-2">
-                <label for="exampleFormControlTextarea1" class="form-label input-group-text col-md-2">餐點描述</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="meals_describe"
-                    readonly></textarea>
-            </div>
+        <div class="justify-content-end d-flex">
+            <button type="submit" class="btn btn-outline-danger mt-3 ">
+                <img style=" width: 24px; height: 24px;" src="{% static 'update_icon.png' %}" title="更新">更新
+            </button>
         </div>
-        <div class="col-md-2 mt-2 align-items-center justify-content-center d-flex">
-            <div>
-                <a class="align-items-center" href="/">
-                    <img style="width: 16px;" src="{% static 'modify_icon.png' %}" title="修改">修改
-                </a>
-            </div>
-            <div>
-                <a class="align-items-center" href="/">
-                    <img style="width: 16px;" src="{% static 'remove_icon.png' %}" title="刪除">刪除
-                </a>
-            </div>
+    </form>
+</div>
 
+
+
+<!-- additem.Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title " id="staticBackdropLabel">餐點新增</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="post">
+                    {% csrf_token %}
+                    <div class="mt-2 justify-content-center align-items-center d-flex">
+                        <figure class="figure">
+                            <figcaption class="figure-caption justify-content-center d-flex">餐點圖像</figcaption>
+                            <img id="previewImage" src="" class="figure-img img-fluid rounded" name="meals_previews">
+                        </figure>
+                    </div>
+                    <div class="mt-3 d-flex align-items-center justify-content-center">
+                        <div class="mb-3">
+                            <input class="form-control" type="file" id="formFileMultiple" multiple>
+                        </div>
+                    </div>
+
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="meals_status" id="flexRadioDefault1"
+                            value="1" checked>
+                        <label class="form-check-label" for="flexRadioDefault1">
+                            上線
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="meals_status" id="flexRadioDefault2"
+                            value="0">
+                        <label class="form-check-label" for="flexRadioDefault2">
+                            下線
+                        </label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingItemName" placeholder="" name="meals_name">
+                        <label for="floatingItemName">餐點名稱</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="tel" class="form-control" id="floatingItemPrices" placeholder=""
+                            name="meals_prices">
+                        <label for="floatingItemPrices">餐點價錢</label>
+                    </div>
+                    <div class="form-floating">
+                        <textarea class="form-control" placeholder="粉好吃..." id="floatingTextarea"
+                            name="meals_describe"></textarea>
+                        <label for="floatingTextarea">餐點描述</label>
+                    </div>
+                    <div class="modal-footer mt-5">
+                        <button type="submit" class="btn btn-success" data-bs-dismiss="modal">儲存</button>
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">取消</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
@@ -71,7 +175,56 @@
         }
     });
 </script>
+<!-- <script>
+    var rowCounter = 1;
 
+    function addRow() {
+        // 创建一个新的表格行
+        var newRow = document.createElement('div');
+        newRow.className = 'row';
+        rowCounter++; // 递增行数
+        var rowHtml = `
+        <div class="col-md-2 mt-2 justify-content-center align-items-center d-flex">
+            <img src="" class="img-thumbnail" name="meals_previews${rowCounter}">
+        </div>
+        <div class="col-md-8 mt-2 ">
+            <div class="input-group justify-content-center align-items-center d-flex md-2 mt-2">
+                <span class="input-group-text col-md-2">餐點名稱</span>
+                <input type="text" class="form-control" placeholder="" name="meals_name${rowCounter}" readonly>
+            </div>
+            <div class="input-group justify-content-center align-items-center d-flex md-2 mt-2">
+                <span class="input-group-text col-md-2">餐點價格</span>
+                <input type="tel" class="form-control" placeholder="" name="meals_price${rowCounter}" readonly>
+            </div>
+            <div class="input-group justify-content-center align-items-center d-flex md-2 mt-2">
+                <label for="exampleFormControlTextarea1" class="form-label input-group-text col-md-2">餐點描述</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="meals_describe${rowCounter}"
+                    readonly></textarea>
+            </div>
+        </div>
+        <div class="col-md-2 mt-2 align-items-center justify-content-center d-flex">
+            <div>
+                <a class="align-items-center" href="/">
+                    <img style="width: 16px;" src="{% static 'modify_icon.png' %}" title="修改">修改
+                </a>
+            </div>
+            <div>
+                <a class="align-items-center" href="/">
+                    <img style="width: 16px;" src="{% static 'remove_icon.png' %}" title="刪除">刪除
+                </a>
+            </div>
+        </div>
+            `;
 
+        newRow.innerHTML = rowHtml;
+
+        // 将新行添加到表单内的容器中
+        var container = document.getElementById('additionalRowsContainer');
+        container.appendChild(newRow);
+
+        calculateTotalAmount(); // 更新总金额
+    }
+
+</script> -->
 
 {% endblock content %}
