--- a/app/templates/client_base.html
+++ b/app/templates/client_base.html
@@ -93,11 +93,23 @@
             </div>
         </nav>
     </div>
+    {%if succmesg %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>恭喜!</strong>{{succmesg}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endif %}
+    {% if errmesg %}
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <strong>錯誤!</strong>{{errmesg}}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    {% endif %}
     <div class="container my-5">
         {% block content %}
         <div class="container justify-content-center d-flex">
             <div class="form-structor zoomer">
-                <form method="post" action="">
+                <form method="POST" action="/clt/signup/">
                     {% csrf_token %}
                     <div class="signup slide-up">
                         <h2 class="form-title" id="signup">
@@ -105,8 +117,9 @@
                         </h2>
                         <div class="form-holder">
                             <input type="tel" class="input" placeholder="統一編號" name="uniform_numbers" />
-                            <input type="password" class="input" placeholder="密碼" name="psw" id="password" />
-                            <input type="password" class="input" placeholder="再次輸入密碼" id="password_confirm" />
+                            <input type="password" class="input" placeholder="密碼" id="password" name="psw" />
+                            <input type="password" class="input" placeholder="再次輸入密碼" id="password_confirm"
+                                name="password_confirm" />
                             <p class="text-center mt-2">
                                 <small class="text-danger" style="font-size: 60%;">請輸入6到15位數字或英文作為密碼</small>
                             </p>
@@ -115,7 +128,7 @@
                         <button type="submit" class="submit-btn">註冊</button>
                     </div>
                 </form>
-                <form method="post" action="">
+                <form method="POST" action="/clt/login/">
                     {% csrf_token %}
                     <div class="login ">
                         <div class="center">
